--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@
 
 html {
   font-size: 16px;
+  overflow-y: scroll;
 }
 
 body {
